Rename watir2 => watir-webdriver

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,7 +1,7 @@
-= watir2
+= watir-webdriver
 
-Spike of a Watir implementation built on WebDriver's Ruby bindings.
-See http://rubyforge.org/pipermail/wtr-development/2009-October/001313.html for details.
+Watir implementation built on WebDriver's Ruby bindings.
+See http://rubyforge.org/pipermail/wtr-development/2009-October/001313.html.
 
 = Description
 
