--- a/lib/watir-webdriver/atoms/README
+++ b/lib/watir-webdriver/atoms/README
@@ -1,3 +1,3 @@
 These compiled JavaScript fragments originate in the Selenium code base, and are under the Apache 2.0 License.
 
-See http://selenium.googlecode.com/svn/trunk/javascript/watir-atoms/
+See https://github.com/SeleniumHQ/selenium/tree/master/javascript/watir-atoms
