--- a/lib/watir/atoms/README
+++ b/lib/watir/atoms/README
@@ -1,3 +1,7 @@
 These compiled JavaScript fragments originate in the Selenium code base, and are under the Apache 2.0 License.
 
 See https://github.com/SeleniumHQ/selenium/tree/master/javascript/watir-atoms
+
+To build in Selenium project, run:
+
+`./go //javascript/watir-atoms:<name_of_fragment>`
